; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_emit_shf.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/netronome/nfp/bpf/extr_jit.c_emit_shf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfp_prog = type { i32 }
%struct.nfp_insn_re_regs = type { i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nfp_prog*, i32, i32, i32, i32, i32, i32)* @emit_shf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @emit_shf(%struct.nfp_prog* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.nfp_prog*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.nfp_insn_re_regs, align 4
  %16 = alloca i32, align 4
  store %struct.nfp_prog* %0, %struct.nfp_prog** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %10, align 4
  %19 = load i32, i32* %12, align 4
  %20 = call i32 @swreg_to_restricted(i32 %17, i32 %18, i32 %19, %struct.nfp_insn_re_regs* %15, i32 1)
  store i32 %20, i32* %16, align 4
  %21 = load i32, i32* %16, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %27

23:                                               ; preds = %7
  %24 = load i32, i32* %16, align 4
  %25 = load %struct.nfp_prog*, %struct.nfp_prog** %8, align 8
  %26 = getelementptr inbounds %struct.nfp_prog, %struct.nfp_prog* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 4
  br label %51

27:                                               ; preds = %7
  %28 = load %struct.nfp_prog*, %struct.nfp_prog** %8, align 8
  %29 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 8
  %30 = load i32, i32* %29, align 4
  %31 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 7
  %32 = load i32, i32* %31, align 4
  %33 = load i32, i32* %13, align 4
  %34 = load i32, i32* %14, align 4
  %35 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 6
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* %11, align 4
  %38 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 5
  %39 = load i32, i32* %38, align 4
  %40 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 4
  %41 = load i32, i32* %40, align 4
  %42 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 3
  %43 = load i32, i32* %42, align 4
  %44 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 2
  %45 = load i32, i32* %44, align 4
  %46 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 1
  %47 = load i32, i32* %46, align 4
  %48 = getelementptr inbounds %struct.nfp_insn_re_regs, %struct.nfp_insn_re_regs* %15, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @__emit_shf(%struct.nfp_prog* %28, i32 %30, i32 %32, i32 %33, i32 %34, i32 %36, i32 %37, i32 %39, i32 %41, i32 %43, i32 %45, i32 %47, i32 %49)
  br label %51

51:                                               ; preds = %27, %23
  ret void
}

declare dso_local i32 @swreg_to_restricted(i32, i32, i32, %struct.nfp_insn_re_regs*, i32) #1

declare dso_local i32 @__emit_shf(%struct.nfp_prog*, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
